@startuml

skinparam classAttributeIconSize 0
skinparam shadowing false

interface Node #E0E0E0 {
    id : string
    label : string
    --
    to(target, label, opts) : Connection
}

abstract class Shape #E8EAF6 {
    id : string
    label : string
    x : number
    y : number
    width : number
    height : number
    style : StyleOpts
    --
    {abstract} outline(w, h) : Float64Array
    {abstract} clipPoint(w, h, angle) : Point
    {abstract} labelPos(w, h) : Point
    defaultSize : Size
    toJSON() : object
}

class Group #E8EAF6 {
    id : string
    label : string
    children : list
    style : GroupStyle
    --
    add(el) : Shape
    group(label, opts) : Group
    toJSON() : object
}

Node <|.. Shape
Node <|.. Group

class RectangleShape #D1C4E9
class EllipseShape #D1C4E9
class DiamondShape #D1C4E9
class TextShape #D1C4E9

Shape <|-- RectangleShape
Shape <|-- EllipseShape
Shape <|-- DiamondShape
Shape <|-- TextShape

class Connection #BBDEFB {
    id : string
    from : Node
    to : Node
    label : string
    type : arrow or line
    style : ConnectionStyle
    --
    toJSON() : object
}

class Diagram #E3F2FD {
    title : string
    children : list
    connections : list
    layout : Layout
    --
    add(el) : Shape
    group(label, opts) : Group
    publish(engine) : url
    toJSON() : object
}

Diagram o-- "0..*" Node : children
Diagram o-- "0..*" Connection
Diagram *-- "1" Layout
Group o-- "0..*" Node : children

abstract class Engine #C8E6C9 {
    name : string
    --
    {abstract} render(d) : Uint8Array
}

class CleanEngine #A5D6A7 {
    font = 1 Nunito Bold
    --
    solid fills
    crisp strokes
}

class RoughEngine #A5D6A7 {
    roughness : number
    seed : number
    font = 0 Architects Daughter
    --
    wobble paths
    hachure fills
}

Engine <|-- CleanEngine
Engine <|-- RoughEngine

interface Layout #B2DFDB {
    apply(d) : void
    toJSON() : object
}

class Sugiyama #80CBC4 {
    direction : TB LR BT RL
    spacing : number
    --
    apply(d) : void
}

Layout <|.. Sugiyama

class WasmCanvas <<Rust>> #FFCDD2 {
    new(w, h)
    clear(color)
    fill_path(segs, color)
    stroke_path(segs, color, w)
    stroke_path_dashed(segs, color, w, dash)
    draw_text(text, x, y, size, color, font)
    measure_text(text, size, font) : Size
    to_png() : Uint8Array
    to_image_data() : Uint8Array
}

class Diagramz <<static>> #E3F2FD {
    {static} toCode(json) : string
    {static} fromJson(json) : Diagram
}

CleanEngine ..> WasmCanvas : uses
RoughEngine ..> WasmCanvas : uses
Engine ..> Shape : reads outline
Diagram ..> Engine : publish delegates
Diagramz ..> Diagram

note as N1
    Factory functions
    rectangle(label, opts)
    ellipse(label, opts)
    diamond(label, opts)
    text(label, opts)
end note

N1 .. RectangleShape

note as N2
    Path format Float64Array
    0 x y = MoveTo
    1 x y = LineTo
    2 x1 y1 x2 y2 x y = CubicTo
    3 = Close
end note

N2 .. WasmCanvas

@enduml
